updated javascript. can select element, but classes are not currently updating

--- a/index.html
+++ b/index.html
@@ -21,48 +21,48 @@
   </header>
   <div class="container">
     <div class="row">
-      <div class="hour">9AM</div>
-      <textarea></textarea>
+      <div class="hour" >9AM</div>
+      <textarea data-hour="9"></textarea>
       <div class="saveBtn">Save</div>
     </div>
     <div class="row">
       <div class="hour">10AM</div>
-      <textarea></textarea>
+      <textarea data-hour="10"></textarea>
       <div class="saveBtn">Save</div>
     </div>
     <div class="row">
       <div class="hour">11AM</div>
-      <textarea></textarea>
+      <textarea data-hour="11"></textarea>
       <div class="saveBtn">Save</div>
     </div>
     <div class="row">
       <div class="hour">12PM</div>
-      <textarea></textarea>
+      <textarea data-hour="12"></textarea>
       <div class="saveBtn">Save</div>
     </div>
     <div class="row">
       <div class="hour">1PM</div>
-      <textarea></textarea>
+      <textarea data-hour="13"></textarea>
       <div class="saveBtn">Save</div>
     </div>
     <div class="row">
       <div class="hour">2PM</div>
-      <textarea></textarea>
+      <textarea data-hour="14"></textarea>
       <div class="saveBtn">Save</div>
     </div>
     <div class="row">
       <div class="hour">3PM</div>
-      <textarea></textarea>
+      <textarea data-hour="15"></textarea>
       <div class="saveBtn">Save</div>
     </div>
     <div class="row">
       <div class="hour">4PM</div>
-      <textarea></textarea>
+      <textarea data-hour="16"></textarea>
       <div class="saveBtn">Save</div>
     </div>
     <div class="row">
       <div class="hour">5PM</div>
-      <textarea></textarea>
+      <textarea data-hour="17"></textarea>
       <div class="saveBtn">Save</div>
     </div>
   </div>
