--- a/index.html
+++ b/index.html
@@ -23,47 +23,47 @@
     <div class="row"> 
       <div class="hour" >9AM</div>
       <textarea data-hour="9"></textarea>
-      <div class="saveBtn">Save</div>
+      <div class="saveBtn" data-hour="9">Save</div>
     </div>
     <div class="row">
       <div class="hour">10AM</div>
       <textarea data-hour="10"></textarea>
-      <div class="saveBtn">Save</div>
+      <div class="saveBtn" data-hour="10">Save</div>
     </div>
     <div class="row">
       <div class="hour">11AM</div>
       <textarea data-hour="11"></textarea>
-      <div class="saveBtn">Save</div>
+      <div class="saveBtn" data-hour="11">Save</div>
     </div>
     <div class="row">
       <div class="hour">12PM</div>
       <textarea data-hour="12"></textarea>
-      <div class="saveBtn">Save</div>
+      <div class="saveBtn" data-hour="12">Save</div>
     </div>
     <div class="row">
       <div class="hour">1PM</div>
       <textarea data-hour="13"></textarea>
-      <div class="saveBtn">Save</div>
+      <div class="saveBtn" data-hour="13">Save</div>
     </div>
     <div class="row">
       <div class="hour">2PM</div>
       <textarea data-hour="14"></textarea>
-      <div class="saveBtn">Save</div>
+      <div class="saveBtn" data-hour="14">Save</div>
     </div>
     <div class="row">
       <div class="hour">3PM</div>
       <textarea data-hour="15"></textarea>
-      <div class="saveBtn">Save</div>
+      <div class="saveBtn" data-hour="15">Save</div>
     </div>
     <div class="row">
       <div class="hour">4PM</div>
       <textarea data-hour="16"></textarea>
-      <div class="saveBtn">Save</div>
+      <div class="saveBtn" data-hour="16">Save</div>
     </div>
     <div class="row">
       <div class="hour">5PM</div>
       <textarea data-hour="17"></textarea>
-      <div class="saveBtn">Save</div>
+      <div class="saveBtn" data-hour="17">Save</div>
     </div>
   </div>
 
