--- a/index.html
+++ b/index.html
@@ -22,47 +22,47 @@
   <div class="container">
     <div class="row"> 
       <div class="hour" >9AM</div>
-      <textarea data-hour="9"></textarea>
+      <textarea id="9" data-hour="9"></textarea>
       <div class="saveBtn" data-hour="9">Save</div>
     </div>
     <div class="row">
       <div class="hour">10AM</div>
-      <textarea data-hour="10"></textarea>
+      <textarea id="10" data-hour="10"></textarea>
       <div class="saveBtn" data-hour="10">Save</div>
     </div>
     <div class="row">
       <div class="hour">11AM</div>
-      <textarea data-hour="11"></textarea>
+      <textarea id="11" data-hour="11"></textarea>
       <div class="saveBtn" data-hour="11">Save</div>
     </div>
     <div class="row">
       <div class="hour">12PM</div>
-      <textarea data-hour="12"></textarea>
+      <textarea id="12" data-hour="12"></textarea>
       <div class="saveBtn" data-hour="12">Save</div>
     </div>
     <div class="row">
       <div class="hour">1PM</div>
-      <textarea data-hour="13"></textarea>
+      <textarea id="13" data-hour="13"></textarea>
       <div class="saveBtn" data-hour="13">Save</div>
     </div>
     <div class="row">
       <div class="hour">2PM</div>
-      <textarea data-hour="14"></textarea>
+      <textarea id="14" data-hour="14"></textarea>
       <div class="saveBtn" data-hour="14">Save</div>
     </div>
     <div class="row">
       <div class="hour">3PM</div>
-      <textarea data-hour="15"></textarea>
+      <textarea id="15" data-hour="15"></textarea>
       <div class="saveBtn" data-hour="15">Save</div>
     </div>
     <div class="row">
       <div class="hour">4PM</div>
-      <textarea data-hour="16"></textarea>
+      <textarea id="16" data-hour="16"></textarea>
       <div class="saveBtn" data-hour="16">Save</div>
     </div>
     <div class="row">
       <div class="hour">5PM</div>
-      <textarea data-hour="17"></textarea>
+      <textarea id="17" data-hour="17"></textarea>
       <div class="saveBtn" data-hour="17">Save</div>
     </div>
   </div>
