added styling classes and attributes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
+  <script src="https://kit.fontawesome.com/82fad99949.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./assets/style.css" />
   <title>Work Day Scheduler</title>
 </head>
@@ -23,47 +24,47 @@
     <div class="row"> 
       <div class="hour" >9AM</div>
       <textarea id="9" data-hour="9"></textarea>
-      <div class="saveBtn" data-hour="9">Save</div>
+      <div class="saveBtn" data-hour="9"><i class="far fa-save fa-lg"></i></div>
     </div>
     <div class="row">
       <div class="hour">10AM</div>
       <textarea id="10" data-hour="10"></textarea>
-      <div class="saveBtn" data-hour="10">Save</div>
+      <div class="saveBtn" data-hour="10"><i class="far fa-save fa-lg"></i></div>
     </div>
     <div class="row">
       <div class="hour">11AM</div>
       <textarea id="11" data-hour="11"></textarea>
-      <div class="saveBtn" data-hour="11">Save</div>
+      <div class="saveBtn" data-hour="11"><i class="far fa-save fa-lg"></i></div>
     </div>
     <div class="row">
       <div class="hour">12PM</div>
       <textarea id="12" data-hour="12"></textarea>
-      <div class="saveBtn" data-hour="12">Save</div>
+      <div class="saveBtn" data-hour="12"><i class="far fa-save fa-lg"></i></div>
     </div>
     <div class="row">
       <div class="hour">1PM</div>
       <textarea id="13" data-hour="13"></textarea>
-      <div class="saveBtn" data-hour="13">Save</div>
+      <div class="saveBtn" data-hour="13"><i class="far fa-save fa-lg"></i></div>
     </div>
     <div class="row">
       <div class="hour">2PM</div>
       <textarea id="14" data-hour="14"></textarea>
-      <div class="saveBtn" data-hour="14">Save</div>
+      <div class="saveBtn" data-hour="14"><i class="far fa-save fa-lg"></i></div>
     </div>
     <div class="row">
       <div class="hour">3PM</div>
       <textarea id="15" data-hour="15"></textarea>
-      <div class="saveBtn" data-hour="15">Save</div>
+      <div class="saveBtn" data-hour="15"><i class="far fa-save fa-lg"></i></div>
     </div>
     <div class="row">
       <div class="hour">4PM</div>
       <textarea id="16" data-hour="16"></textarea>
-      <div class="saveBtn" data-hour="16">Save</div>
+      <div class="saveBtn" data-hour="16"><i class="far fa-save fa-lg"></i></div>
     </div>
     <div class="row">
       <div class="hour">5PM</div>
       <textarea id="17" data-hour="17"></textarea>
-      <div class="saveBtn" data-hour="17">Save</div>
+      <div class="saveBtn" data-hour="17"><i class="far fa-save fa-lg"></i></div>
     </div>
   </div>
 
