--- a/index.html
+++ b/index.html
@@ -68,6 +68,13 @@
     </div>
   </div>
 
+  <footer class="row">
+    <div class="col-md">
+    <p>Designed and built by Zak Monnet</p>
+    <p>&#169 Zak Monnet, 2020</p>
+    </div>
+  </footer>
+
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   <script src="assets/script.js"></script>
